k8s/monitoring/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  ingressClassName: nginx-v2
  rules:
  - host: alertmanager.a7d3573f1805645ab9900cdddcfd9f10-1651240173.eu-north-1.elb.amazonaws.com.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-kube-prometheus-alertmanager
            port:
              number: 9093
